# hanging_points_generator

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  check_contact_points_from_json.py  check_contact_points_from_pickle.py  create_mesh.py  create_mesh_from_data.py  donwload_sample_data.py  hanging_part_detector.py  hanging_points_generator.py  icp_camera_pose_estimation.py  meshfix.py  package.xml  pub_contact_points.py  py3_requirement.txt  setup.py
create_mesh_sample_data/: camera_pose0.npy  camera_pose5.npy  camera_pose6.npy  camera_pose7.npy  intrinsic.npy
evaluation/: README.md  eval_pose.py
examples/: check_contact_points_from_json.py  create_mesh_from_data.py  create_mesh_tsdf.py  create_mesh_voxelize_marching_cubes.py  create_voxel_mesh_from_pcd.py  icp_camera_pose_estimation.py  smoothing_mesh.py  tsdf_fusion.py
hanging_part_detector/: __init__.py
hanging_points_generator/: __init__.py  check_contact_points_from_json.py  check_hanging_pose_dir.py  create_mesh.py  create_mesh_from_data.py  create_voxel_mesh_from_pcd.py  donwloader.py  generate_hanging_points.py  generate_pouring_points.py  generator_utils.py  hanging_points_generator.py  hp_generator.py  icp_camera_pose_estimation.py  meshfix.py  pouring_points_generator.py  pp_generator.py  renderer.py  run_many.py
juice_mesh_data/: camera_pose0.npy  camera_pose1.npy  camera_pose10.npy  camera_pose11.npy  camera_pose12.npy  camera_pose13.npy  camera_pose14.npy  camera_pose15.npy  camera_pose16.npy  camera_pose17.npy  camera_pose18.npy  camera_pose19.npy  camera_pose2.npy  camera_pose3.npy  (+6 more)
(+111 files in other folders)
