<?xml version="1.0"?>
<package format="2">
  <name>hanging_points_generator</name>
  <version>0.0.0</version>
  <description>The hanging_points_generator package</description>
  <maintainer email="kosuke.tnp@gmmail.com">kosuke</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
